--- a/ancient/style.ini
+++ b/ancient/style.ini
@@ -36,6 +36,7 @@ css/structure.css                     = screen
 css/design.css                        = screen
 css/content.css                       = screen
 css/includes.css                      = screen
+css/pagetools.less                    = screen
 
 css/mobile.css                        = all
 css/style.css                         = all
@@ -55,7 +56,7 @@ css/print.css                         = print
 
 ; main text and background colors
 __text__           = "#333"                 ; @ini_text
-__background__     = "#fff"                 ; @ini_background
+__background__     = "#F9F7ED"                 ; @ini_background
 ; alternative text and background colors
 __text_alt__       = "#999"                 ; @ini_text_alt
 __background_alt__ = "#eee"                 ; @ini_background_alt
